# prog_2025

./: CMakeLists.txt
code/sem_1/unit_1/: 02_03.cpp
code/sem_1/unit_2/: 02_09.cpp  03_02.cpp  03_05.cpp  03_06.cpp  03_07.cpp  03_09.cpp  03_10.cpp  ex_03_11.cpp  ex_03_12.cpp
code/sem_2/task_12/: 05_05.cpp
code/sem_2/task_12/06_04/: 06_04.txt
code/sem_2/task_12/06_05/: 06_05.cpp  library.cpp  library.hpp  library_v1.cpp  library_v2.cpp
code/sem_2/task_13/: 07_01.cpp  07_02.cpp  07_03.txt
code/sem_2/task_14/: 07_04.cpp
code/sem_2/task_14/07_05/: 07_05.cpp
code/sem_2/task_15/: 08.13.hpp  08_01.cpp  08_02.cpp  08_03.cpp  08_04.cpp  08_05.cpp
code/sem_2/task_16/: 09_04.cpp  09_05.cpp  09_06.cpp
code/sem_2/task_16/09_01/: 09_01.cpp  tracer.hpp
code/sem_2/task_16/09_02/: 09_02.cpp  tree.hpp
code/sem_2/task_16/09_03/: 05_01.cpp  05_03.cpp  05_04.cpp  05_09.cpp  05_13.cpp
code/sem_2/task_17/: 09_08.cpp
code/sem_2/task_17/09_07/: entity.cpp  entity.hpp
code/sem_2/task_17/09_09/: 09_09.cpp
code/sem_2/task_17/09_10/: Allocator.hpp  free_list_allocator.cpp  linear_allocator.cpp  list_allocator.cpp  stack_allocator.cpp
code/sem_2/task_18/: 10_01.cpp  10_03.cpp  10_04.cpp
code/sem_2/task_18/10_01/: 10_01.cpp
code/sem_2/task_18/10_05/: 10_05.cpp  10_05.py  collisions.csv
code/sem_2/task_19/: 11_01.cpp  11_03.cpp
code/sem_2/task_20/: 11_04.cpp  11_06.cpp
code/sem_2/task_20/11_05/: 11_05_fibonacci.cpp  11_05_mae_mse.cpp  11_05_ranges.cpp  11_05_transform_if.cpp  11_05_views.cpp
code/sem_2/task_21/: 12_01.cpp  12_02.cpp  12_03.cpp  12_04.cpp
code/sem_2/task_21/12_05/: 12_19_new.cpp
code/sem_2/task_22/: 13_01.cpp  13_02.cpp  13_03.cpp  13_04.cpp
code/sem_2/task_22/13_02/: 12_19_fstream.cpp  12_26_fstream.cpp
code/unit_1/: 02_05.cpp  02_06.cpp
code/unit_2/: 02_09.cpp  02_10.cpp  03_01.cpp  03_03.cpp  03_04.cpp  03_05.cpp  03_09.cpp  03_10.cpp  ex_03_11.cpp  ex_03_12.cpp
code/week_2/: 02_01.cpp  02_02.cpp  02_03.cpp  02_06.cpp  02_07.cpp  02_08.cpp  ex_02_05.cpp
week_2/: 02_01.cpp  02_02.cpp  02_03.cpp  02_04.cpp
